--- a/plantillas/templates/categorias.html
+++ b/plantillas/templates/categorias.html
@@ -42,6 +42,14 @@
         </div>
         <div class="piedepagina">
             <p>Copyright © 2021 Gaseosas la Cigarra</p>
+            <div class="redessociales">
+                    <ul>
+                        <li><a href="https://es-la.facebook.com/gaseosaslacigarra/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="https://twitter.com/gaseosascigarra" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="https://www.instagram.com/gaseosaslacigarra/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                    </ul>
+                
+            </div>
         </div>
     </main>
 </body>
