--- a/plantillas/templates/inicio.html
+++ b/plantillas/templates/inicio.html
@@ -43,7 +43,9 @@
                     <h2>Nosotros</h2>
                 </div>
                 <div class="parrafo">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque voluptas voluptates beatae alias! Voluptate dolorum quidem, cumque suscipit facere corporis ex alias similique, molestiae optio aliquam esse, accusamus officia? Consequatur!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque voluptas voluptates beatae alias! Voluptate dolorum quidem, cumque suscipit facere corporis ex alias similique, molestiae optio aliquam esse, accusamus officia? Consequatur!</p>
+                    <p>Industria La Cigarra S.A.S. Lleva 77 años de existencia y siendo unas de las empresas más consolidadas y solidas de la región. Fundada por el ciudadano pastuso Isaac Zamora el 27 de agosto de 1944 quien apoyado del empresario Sr Hernando Suarez Burgos en el año de 1984 dio continuidad al trabajo realizado, cuando la empresa afronto una difícil situación económica amenazando su clausura. Se reconoce entonces, que la política de intenso y denodado trabajo que caracteriza todas las actividades de Suárez Burgos fue definitiva para que la situación comenzara a mejorar. No fue una tarea fácil. A pesar de todos los esfuerzos desplegados, durante 11 años no se lograron ganancias importantes, hasta que finalmente los sacrificios dieron sus frutos y la empresa se estabilizó y entró por la ruta del progreso que la caracteriza hoy.</p>
+                    <br>
+                    <p>Gran parte de la etapa de esplendor que hoy vive La Cigarra, se debe a la enorme aceptación por parte del pueblo nariñense. Desde un principio se procuró que las gaseosas estuvieran en todos los rincones del departamento. Ahora, se consumen en gran escala en Nariño, Cauca y Putumayo, donde la comunidad reconoce la calidad de estos productos que salen a la comercialización, gracias a un esfuerzo netamente de personas de la región, que sienten el orgullo de ser protagonista en su elaboración. Lo cierto es que hoy en día La Cigarra ocupa un vasto espacio en el corazón de la gente de Nariño, por todo lo que representa para esta región sur del país, en materia de desarrollo empresarial y generación de empleo.</p>
                 </div>
                 <div class="imagen">
                     <img src="../img/lacigarralocal.jpg" alt="">
@@ -54,7 +56,16 @@
         </div>
         <div class="piedepagina">
             <p>Copyright © 2021 Gaseosas la Cigarra</p>
+            <div class="redessociales">
+                    <ul>
+                        <li><a href="https://es-la.facebook.com/gaseosaslacigarra/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="https://twitter.com/gaseosascigarra" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="https://www.instagram.com/gaseosaslacigarra/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                    </ul>
+                
+            </div>
         </div>
+        
     </main>
 </body>
 </html>
