--- a/plantillas/templates/panaderia.html
+++ b/plantillas/templates/panaderia.html
@@ -9,6 +9,9 @@
     <title>Línea de Panadería</title>
 </head>
 <body>
+    <!-- <video src="../img/pan.mp4" autoplay loop muted>
+                    
+    </video> -->
     <main class="contenedor">
         <div class="cabecera">
             <div class="logo">
@@ -29,31 +32,34 @@
             </div>
             <div class="filauno">
                 <div>
-                    <img class="imgagua" src="../img/panaderia.png" alt="">
+                    <img class="imgpanaderia" src="../img/panaderia.png" alt="">
                     <div>
-                        <button type="button" class="mas">+</button><input type="text"><button type="button" class="menos">-</button>
+                        <button id="mas1" type="button" class="mas">+</button><input id="input1" type="text" value="0" readonly><button id="menos1" type="button" class="menos">-</button>
                     </div>
                 </div>
                 
                 <div>
-                    <img class="imgagua" src="../img/panaderia.png" alt="">
+                    <img class="imgpanaderia" src="../img/panaderia.png" alt="">
                     <div>
-                        <button type="button" class="mas">+</button><input type="text"><button type="button" class="menos">-</button>
+                        <button id="mas2" type="button" class="mas">+</button><input id="input2" type="text" value="0" readonly><button id="menos2" type="button" class="menos">-</button>
                     </div>
                 </div>
 
                 <div>
-                    <img class="imgagua" src="../img/panaderia.png" alt="">
+                    <img class="imgpanaderia" src="../img/panaderia.png" alt="">
                     <div>
-                        <button type="button" class="mas">+</button><input type="text"><button type="button" class="menos">-</button>
+                        <button id="mas3" type="button" class="mas">+</button><input id="input3" type="text" value="0" readonly><button id="menos3" type="button" class="menos">-</button>
                     </div>
                 </div>
                 <div>
-                    <img class="imgagua" src="../img/panaderia.png" alt="">
+                    <img class="imgpanaderia" src="../img/panaderia.png" alt="">
                     <div>
-                        <button type="button" class="mas">+</button><input type="text"><button type="button" class="menos">-</button>
+                        <button id="mas4" type="button" class="mas">+</button><input id="input4" type="text" value="0" readonly><button id="menos4" type="button" class="menos">-</button>
                     </div>
                 </div>
+            </div>
+            <div class="btnpedido">
+                <input class="btn" type="button" value="Ordenar">
             </div>
             <div class="description">
                 <h2>Descripción</h2>
@@ -63,7 +69,16 @@
         </div>
         <div class="piedepagina">
             <p>Copyright © 2021 Gaseosas la Cigarra</p>
+            <div class="redessociales">
+                    <ul>
+                        <li><a href="https://es-la.facebook.com/gaseosaslacigarra/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="https://twitter.com/gaseosascigarra" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="https://www.instagram.com/gaseosaslacigarra/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                    </ul>
+                
+            </div>
         </div>
     </main>
+    <script src="../js/javascript.js"></script>
 </body>
 </html>
