--- a/plantillas/templates/inicio.html
+++ b/plantillas/templates/inicio.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rakkas&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rakkas&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilosinicio.css">
     <title>Inicio</title>
 </head>
+
 <body>
     <main class="contenedor">
         <div class="cabecera">
@@ -43,29 +46,124 @@
                     <h2>Nosotros</h2>
                 </div>
                 <div class="parrafo">
-                    <p>Industria La Cigarra S.A.S. Lleva 77 años de existencia y siendo unas de las empresas más consolidadas y solidas de la región. Fundada por el ciudadano pastuso Isaac Zamora el 27 de agosto de 1944 quien apoyado del empresario Sr Hernando Suarez Burgos en el año de 1984 dio continuidad al trabajo realizado, cuando la empresa afronto una difícil situación económica amenazando su clausura. Se reconoce entonces, que la política de intenso y denodado trabajo que caracteriza todas las actividades de Suárez Burgos fue definitiva para que la situación comenzara a mejorar. No fue una tarea fácil. A pesar de todos los esfuerzos desplegados, durante 11 años no se lograron ganancias importantes, hasta que finalmente los sacrificios dieron sus frutos y la empresa se estabilizó y entró por la ruta del progreso que la caracteriza hoy.</p>
-                    <br>
-                    <p>Gran parte de la etapa de esplendor que hoy vive La Cigarra, se debe a la enorme aceptación por parte del pueblo nariñense. Desde un principio se procuró que las gaseosas estuvieran en todos los rincones del departamento. Ahora, se consumen en gran escala en Nariño, Cauca y Putumayo, donde la comunidad reconoce la calidad de estos productos que salen a la comercialización, gracias a un esfuerzo netamente de personas de la región, que sienten el orgullo de ser protagonista en su elaboración. Lo cierto es que hoy en día La Cigarra ocupa un vasto espacio en el corazón de la gente de Nariño, por todo lo que representa para esta región sur del país, en materia de desarrollo empresarial y generación de empleo.</p>
+                    <p>Industria La Cigarra S.A.S. Lleva 77 años de existencia y siendo unas de las empresas más
+                        consolidadas y solidas de la región. Fundada por el ciudadano pastuso Isaac Zamora el 27 de
+                        agosto de 1944 quien apoyado del empresario Sr Hernando Suarez Burgos en el año de 1984 dio
+                        continuidad al trabajo realizado, cuando la empresa afronto una difícil situación económica
+                        amenazando su clausura. Se reconoce entonces, que la política de intenso y denodado trabajo que
+                        caracteriza todas las actividades de Suárez Burgos fue definitiva para que la situación
+                        comenzara a mejorar. No fue una tarea fácil. A pesar de todos los esfuerzos desplegados, durante
+                        11 años no se lograron ganancias importantes, hasta que finalmente los sacrificios dieron sus
+                        frutos y la empresa se estabilizó y entró por la ruta del progreso que la caracteriza hoy.</p>
+                    <!-- <br>
+                    <p>Gran parte de la etapa de esplendor que hoy vive La Cigarra, se debe a la enorme aceptación por
+                        parte del pueblo nariñense. Desde un principio se procuró que las gaseosas estuvieran en todos
+                        los rincones del departamento. Ahora, se consumen en gran escala en Nariño, Cauca y Putumayo,
+                        donde la comunidad reconoce la calidad de estos productos que salen a la comercialización,
+                        gracias a un esfuerzo netamente de personas de la región, que sienten el orgullo de ser
+                        protagonista en su elaboración. Lo cierto es que hoy en día La Cigarra ocupa un vasto espacio en
+                        el corazón de la gente de Nariño, por todo lo que representa para esta región sur del país, en
+                        materia de desarrollo empresarial y generación de empleo.</p> -->
                 </div>
                 <div class="imagen">
+
                     <img src="../img/lacigarralocal.jpg" alt="">
-                </div>    
-               
-                
+                    <div class="div">
+                        <h3>Nuestros Objetivos</h3>
+                        <ul>
+                            <li>Fabricar productos bajo un sistema de producción eficiente, que permita establecer en el
+                                tiempo mejoras adicionales en el desempeño laboral, y logrando así un mejor
+                                posicionamiento.</li>
+                            <li>Mantener las condiciones de trabajo con seguridad y profesionalismo mediante el control
+                                de riesgos de seguridad y salud ocupacional, mejorando el desempeño de la empresa en
+                                este sentido.</li>
+                            <li>Lograr la satisfacción de nuestros clientes y empleados con productos de buena calidad e
+                                innovación dentro de las especificaciones establecidas.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="section">
+                    <div class="seccionuno">
+                        <div class="subtitulo">
+                            <h2>Políticas de Calidad</h2>
+                        </div>
+                        <div class="parrafo">
+                            <p>Es política de la empresa conocer las necesidades expresas o implícitas de los clientes y
+                                a su vez dar respuesta con un alto nivel de calidad que satisfaga sus expectativas
+                                eficaz y eficientemente fortaleciendo nuestra imagen empresarial con productos de buena
+                                calidad e innovación dentro de las especificaciones establecidas. De manera que nuestra
+                                empresa proporcione productos y servicios oportunos; contando con excelentes condiciones
+                                de trabajo, seguridad y profesionalismo mejorando así el desempeño laboral y
+                                empresarial.</p>
+                        </div>
+                    </div>
+                    <div class="secciondos">
+                        <div class="subtitulo">
+                            <h2>Misión</h2>
+                        </div>
+                        <div class="parrafo">
+                            <p>Es política de la empresa conocer las necesidades expresas o implícitas de los clientes y
+                                a su vez dar respuesta con un alto nivel de calidad que satisfaga sus expectativas
+                                eficaz y eficientemente fortaleciendo nuestra imagen empresarial con productos de buena
+                                calidad e innovación dentro de las especificaciones establecidas. De manera que nuestra
+                                empresa proporcione productos y servicios oportunos; contando con excelentes condiciones
+                                de trabajo, seguridad y profesionalismo mejorando así el desempeño laboral y
+                                empresarial.</p>
+                        </div>
+                    </div>
+                    <div class="secciontres">
+                        <div class="subtitulo">
+                            <h2>Visión</h2>
+                        </div>
+                        <div class="parrafo">
+                            <p>Es política de la empresa conocer las necesidades expresas o implícitas de los clientes y
+                                a su vez dar respuesta con un alto nivel de calidad que satisfaga sus expectativas
+                                eficaz y eficientemente fortaleciendo nuestra imagen empresarial con productos de buena
+                                calidad e innovación dentro de las especificaciones establecidas. De manera que nuestra
+                                empresa proporcione productos y servicios oportunos; contando con excelentes condiciones
+                                de trabajo, seguridad y profesionalismo mejorando así el desempeño laboral y
+                                empresarial.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="imagen">
+                    <div class="div">
+                        <h3>Valores Corporativos</h3>
+                        <ul>
+                            <li><strong>Honestidad:</strong> nuestro comportamiento debe ser socialmente responsable,
+                                imparcial y sincero, hablando siempre con la verdad y apegado a las reglas de la
+                                compañía.</li>
+                            <li><strong>Respeto:</strong> apegarse a las normas establecidas, buscando el bien común.
+                            </li>
+                            <li><strong>Responsabilidad:</strong> cumplir con los objetivos propuestos por la empresa
+                                evitando alterar nuestro compromiso y teniendo en cuenta que siempre el cliente tiene la
+                                razón.</li>
+                            <li><strong>Integridad:</strong> trabajamos para proporcionar un producto de excelente
+                                calidad y lograr la máxima satisfacción en nuestros clientes.</li>
+                        </ul>
+                    </div>
+                    <img src="../img/lacigarralocal2.jpg" alt="">
+                </div>
+
+
             </div>
         </div>
         <div class="piedepagina">
             <p>Copyright © 2021 Gaseosas la Cigarra</p>
             <div class="redessociales">
-                    <ul>
-                        <li><a href="https://es-la.facebook.com/gaseosaslacigarra/" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                        <li><a href="https://twitter.com/gaseosascigarra" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="https://www.instagram.com/gaseosaslacigarra/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                    </ul>
-                
+                <ul>
+                    <li><a href="https://es-la.facebook.com/gaseosaslacigarra/" target="_blank"><i
+                                class="fab fa-facebook"></i></a></li>
+                    <li><a href="https://twitter.com/gaseosascigarra" target="_blank"><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li><a href="https://www.instagram.com/gaseosaslacigarra/" target="_blank"><i
+                                class="fab fa-instagram"></i></a></li>
+                </ul>
+
             </div>
         </div>
-        
+
     </main>
 </body>
+
 </html>
